--- a/.Secret/machine_learning/Makefile
+++ b/.Secret/machine_learning/Makefile
@@ -1,2 +1,2 @@
 target:
-	g++ -std=c++14 cleanData.cpp main.cpp -L. -ldatabase -Wall -Werror
+	g++ -std=c++14 cleanData.cpp main.cpp ../../../../../../.Secret/Database/database.cpp -Wall -Werror
